// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseInput /> should render 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx fJyvvB"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 kRxJZq iWQtne"
        data-blade-component="base-box"
      >
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 jxivIr"
          data-blade-component="styled-base-input"
          id="name-1-input-2"
          type="text"
          value=""
        />
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<BaseInput /> should render with icons 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="base-box"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx fJyvvB"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="name-31-input-32"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 kRxJZq iWQtne"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx fSbYvl"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx eCxLQc"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <input
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 ihQHHL"
          data-blade-component="styled-base-input"
          id="name-31-input-32"
          placeholder="First Last"
          type="text"
          value=""
        />
        <div
          class="BaseBox-bmPWx fSbYvl"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ZITjD"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                data-blade-component="svg-path"
                fill="hsla(216, 27%, 36%, 1)"
              />
            </svg>
          </div>
        </div>
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
